# PFS

./: .env.example  README.md  main.py  pyproject.toml
backend/: ai_search.py  classifier_trainer.py  config_manager.py  file_engine.py  kb_manager.py  logging_config.py  rag_pipeline.py  routes.py  semantic_search.py
static/: index.html  style.css  ui_handlers.js
